<resources>
    <string name="app_name_main">WanAndroid</string>
    <string name="title_home">主页</string>
    <string name="title_project">项目</string>
    <string name="title_system">体系</string>
    <string name="title_no_public">公众号</string>
    <string name="title_mine">我的</string>

    <string name="bottom_behavior">com.wanou.wanandroid.behavior.BottomNavigationBehavior.java</string>
    <string name="publish_time">时间：</string>
    <string name="separator">/</string>
    <string name="classification">分类：</string>
    <string name="author">作者：</string>

    <string name="open">开</string>
    <string name="close">关</string>
    <string name="collect_article">收藏文章</string>
    <string name="exit">退出登录</string>
    <string name="cancel_collect">取消收藏</string>
    <string name="about_us">关于软件</string>
    <string name="WebView">webView</string>

    <string name="version">版本号：</string>
    <string name="info"><![CDATA[<p>\t\t本App根据大神提供的API接口，使用技术：Okgo + Glide</p>
    <p>\t\t欢迎大家反馈软件中问题 地址：<a href="https://github.com/wodx521/WanAndroid/issues" target="_blank">https://github.com/wodx521/WanAndroid</a></p>
    <p>\t\t<a href="http://www.wanandroid.com/index" target="_blank">WanAndroid</a></p>]]></string>
    <string name="search">搜索</string>
    <string name="hotkey">热门搜索</string>
    <string name="app_title">玩Android</string>

</resources>
