<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/selector_bottom_one"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_project"
        android:icon="@drawable/selector_bottom_two"
        android:title="@string/title_project" />

    <item
        android:id="@+id/navigation_no_public"
        android:icon="@drawable/selector_bottom_third"
        android:title="@string/title_no_public" />

    <item
        android:id="@+id/navigation_system"
        android:icon="@drawable/selector_bottom_four"
        android:title="@string/title_system" />

    <item
        android:id="@+id/navigation_me"
        android:icon="@drawable/selector_bottom_five"
        android:title="@string/title_mine" />

</menu>
